--- a/articles/分治.md
+++ b/articles/分治.md
@@ -15,7 +15,7 @@ $$
 
 - Case 1: $f(n)=O\left(n^{\log_b a-\epsilon}\right) \text{where}~\epsilon>0$, 那么 $T(n)=\Theta\left(n^{\log_b a}\right)$
 - Case 2: $f(n)=\Theta\left(n^{\log _b a} \cdot \log_2^k n\right) \text{where}~k\ge 0$，那么 $T(n)=\Theta\left(n^{\log_b a}\log _2^{k+1} n\right)$ 
-- Case 3: $f(n)=\Omega\left(n^{\log_b a+\epsilon}\right) \text{where}~\epsilon>0$ ，那么 $T(n)=\Theta\left(f\left(n\right)\right)$
+- Case 3: $f(n)=\Omega\left(n^{\log_b a+\epsilon}\right) \text{where}~\epsilon>0$ ，那么 $T(n)=\Theta(f(n))$
 
 ### Examples
 对于归并排序：
@@ -35,3 +35,37 @@ $$
 因为 $n^{\log_2 1}=1$ ，同样适用于第二种情况，因此 $T(n)=\Theta\left(\log_2 n\right)$
 
 # 大数乘法
+假设现在有两个 $2^n$ 位的正整数 $a,b$，需要计算两者相乘的结果。
+考虑将 $a,b$ 的前 $2^{n-1}$ 和后 $2^{n-1}$ 位分开，分别得到 $a_0,a_1,b_0,b_1 \text{where}~a_0+a_1\cdot 2^{n-1}=a,b_0+b_1\cdot 2^{n-1}=b$ ，那么可以得到：
+
+$$
+a \cdot b = a_0\cdot b_0+2^{n-1}\cdot (a_1\cdot b_0+a_0\cdot b_1) + 2^n\cdot a_1\cdot b_1
+$$
+
+本身需要计算出 $a_0\cdot b_0, a_1\cdot b_0, a_0\cdot b_1, a_1\cdot b_1$ 共 $4$ 乘法，但是我们更换计算方式：
+
+$$
+\begin{aligned}
+	A&=(a_0+a_1)\cdot(b_0+b_1) \\
+	B&=a_1\cdot b_1 \\
+	C&=a_0\cdot b_0 \\
+	D&=a_1\cdot b_0+a_0\cdot b_1
+\end{aligned}
+$$
+那么显然有 $A-B-C=D$ ，而我们只需要计算 $1 (\text{from A}) +1 (\text{from B})+1 (\text{from C})=3$ 次乘法，比先前少 $1$ 次，因此总的时间复杂度递推式变为：
+
+$$
+T(n)=3\cdot T\left(\frac{n}{2}\right) + \Theta(n)
+$$
+
+其中 $\Theta(n)$ 是计算加法所需要的时间复杂度，根据主定理，可以得到：$n=n^{\log_2 3 - \log_2 \frac{3}{2}}$ ，适用于 Case 1, 因此时间复杂度为 $\Theta\left(n^{\log _2 3}\right)$
+
+**PS**: 实际上可以使用 快速傅里叶变换 ($\texttt{FFT}$) 做到 $\Theta\left(n\log_2 n\right)$ 的时间复杂度。
+
+# 矩阵乘法
+沿用大数乘法的思路，假设有两个 $2^n\cdot 2^n$ 的矩阵需要计算乘法，将其分别看成两个 $2\times 2$ 的矩阵，其中每一个元素都是一个 $2^{n-1}\cdot 2^{n-1}$ 的矩阵，然后可以发现需要计算 $8$ 次 $2^{n-1}\cdot 2^{n-1}$ 的矩阵乘法，但是实际上可以使用加法，减少一次乘法（具体的计算就不展开了），因此可以得到：
+
+$$
+T(n)=7\cdot T\left(\frac{n}{2}\right) + \Theta\left(n^2\right)
+$$
+根据 $n^2=n^{\log_2 7-\log_2 \frac{7}{2}}$ ，可以得到 $T(n)=\Theta\left(n^{\log_2 7}\right)$ 。
