--- a/articles/分治.md
+++ b/articles/分治.md
@@ -15,7 +15,7 @@ $$
 
 - Case 1: $f(n)=O\left(n^{\log_b a-\epsilon}\right) \text{where}~\epsilon>0$, 那么 $T(n)=\Theta\left(n^{\log_b a}\right)$
 - Case 2: $f(n)=\Theta\left(n^{\log _b a} \cdot \log_2^k n\right) \text{where}~k\ge 0$，那么 $T(n)=\Theta\left(n^{\log_b a}\log _2^{k+1} n\right)$ 
-- Case 3: $f(n)=\Omega\left(n^{\log_b a+\epsilon}\right) \text{where}~\epsilon>0$ ，那么 $T(n)=\Theta(f(n))$
+- Case 3: $f(n)=\Omega\left(n^{\log_b a+\epsilon}\right) \text{where}~\epsilon>0$ ，并且 $\exist c, n_0~\text{s.t}~\forall n\ge n_0, af\left(\frac{n}{b}\right)\leq cf(n)$ 那么 $T(n)=\Theta(f(n))$
 
 ### Examples
 对于归并排序：
@@ -69,3 +69,60 @@ $$
 T(n)=7\cdot T\left(\frac{n}{2}\right) + \Theta\left(n^2\right)
 $$
 根据 $n^2=n^{\log_2 7-\log_2 \frac{7}{2}}$ ，可以得到 $T(n)=\Theta\left(n^{\log_2 7}\right)$ 。
+
+# 平面最近点对
+考虑平面上有 $n$ 个点 $(x_1,y_1),(x_2,y_2)\dots (x_n,y_n)$ ，现在需要求出
+
+$$
+\mathrm{ANS}=\min_{1\leq i<j\leq n} \sqrt{(x_i-x_j)^2+(y_i-y_j)^2}
+$$
+
+范围是 $1\leq n\leq 2\times 10^5, \forall i\in [1,n]\cap \mathbb{Z}, 0\leq |x_i|, |y_i|\leq 10^9$ 。
+
+首先将所有的点按照 $x$ 坐标从小到大排序，使用归并，假设现在需要处理编号（排序后的编号）在 $[l,r]$ 之间的点，取出 $x$ 的中位数 $x_m$，然后将 $[l, \text{mid}]$ 和 $[\text{mid}+1,r]$ 这两个子区间的答案分别求出，得到他们的较小值 $d$ ，并且将两个区间的点按照 $y$ 从小到大排序。
+
+现在可以认为，只有横坐标在 $[x_m-d,x_m+d]$ 之间的点才可能更新答案。因此将左右两个子区间的满足这个条件的点分别取出，得到两个点的序列 $L,R$ ，这两个序列也是按照 $y$ 从小到大排序的。
+
+对于 $L$ 中的节点 $\left(x_{L_i},y_{L_i}\right)$，考虑可能可以更新答案的 $R$ 中的点，显然只有 $y$ 在 $\left[y_{L_i}-d,y_{L_i}+d\right]$ 的点才能更新答案，将 $[x_m,x_m+d]$ 和 $\left[y_{L_i}-d,y_{L_i}+d\right]$ 这两个区间组成的矩形分成 $6$ 个一样的小矩形，可以发现这些小矩形的对角线长度都是 $\frac{5}{6}d$ ，根据 $d$ 的定义，每个小矩形最多有 $1$ 个点，因此对于每一个 $L$ 中的点，只有常数个 $R$ 中的点可能与其配合并更新答案。可以使用双指针法得到 $R$ 中可行的区间。
+
+因此时间复杂度的递推式为
+
+$$
+T(n)=2T\left(\frac{n}{2}\right)+\Theta(n)=\Theta(n\log_2 n)
+$$
+
+```cpp
+struct Point {
+	LL x, y;
+	Point(LL x = 0, LL y = 0) : x(x), y(y) {}
+} p[maxn];
+
+inline LL sqr(LL x) { return x * x; }
+inline LL dis(const Point &a, const Point &b) { return sqr(a.x - b.x) + sqr(a.y - b.y); }
+
+
+LL solve(int l, int r) {
+	if (l >= r) return INF;
+	int mid = (l + r) >> 1;
+	LL midx = p[mid].x, mnd = INF;
+	LL res = min(solve(l, mid), solve(mid + 1, r));
+	vector<Point> lls, rls(1, Point());
+	for (int i = l; i <= mid; i++) if (sqr(midx - p[i].x) < res) lls.push_back(p[i]);
+	for (int i = mid + 1; i <= r; i++) if (sqr(midx - p[i].x) < res) rls.push_back(p[i]);
+	size_t rgl = 1, rgr = 0;
+	for (size_t i = 0; i < lls.size(); i++) {
+		while (rgr < rls.size() - 1 && (rls[rgr].y <= lls[i].y || sqr(rls[rgr + 1].y - lls[i].y) <= res)) rgr++;
+		while (rgl <= rls.size() - 1 && rls[rgl].y < lls[i].y && sqr(rls[rgl].y - lls[i].y) > res) rgl++;
+		for (size_t j = rgl; j <= rgr; j++) mnd = min(mnd, dis(lls[i], rls[j]));
+	}
+	rgl = l, rgr = mid + 1;
+	lls.clear();
+	while (rgl <= mid && rgr <= r) {
+		if (p[rgl].y < p[rgr].y) lls.push_back(p[rgl++]);
+		else lls.push_back(p[rgr++]);
+	}
+	while (rgl <= mid) lls.push_back(p[rgl++]);
+	while (rgr <= r) lls.push_back(p[rgr++]);
+	for (int i = l; i <= r; i++) p[i] = lls[i - l];
+	return min(mnd, res);
+```
