--- a/articles/分治.md
+++ b/articles/分治.md
@@ -15,7 +15,7 @@ $$
 
 - Case 1: $f(n)=O\left(n^{\log_b a-\epsilon}\right) \text{where}~\epsilon>0$, 那么 $T(n)=\Theta\left(n^{\log_b a}\right)$
 - Case 2: $f(n)=\Theta\left(n^{\log _b a} \cdot \log_2^k n\right) \text{where}~k\ge 0$，那么 $T(n)=\Theta\left(n^{\log_b a}\log _2^{k+1} n\right)$ 
-- Case 3: $f(n)=\Omega\left(n^{\log_b a+\epsilon}\right) \text{where}~\epsilon>0$ ，并且 $\exist c, n_0~\text{s.t}~\forall n\ge n_0, af\left(\frac{n}{b}\right)\leq cf(n)$ 那么 $T(n)=\Theta(f(n))$
+- Case 3: $f(n)=\Omega\left(n^{\log_b a+\epsilon}\right) \text{where}~\epsilon>0$ ，并且 $\exists c, n_0~\text{s.t}~\forall n\ge n_0, af\left(\frac{n}{b}\right)\leq cf(n)$ 那么 $T(n)=\Theta(f(n))$
 
 ### Examples
 对于归并排序：
